# loveAudit

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
archive/v1/: .env.example  docker-compose.yml  run_backend.sh  run_frontend.sh
archive/v1/backend/: Dockerfile  README.md  pyproject.toml
archive/v1/backend/app/: config.py  main.py
archive/v1/backend/app/api/v1/: analysis.py  assessment.py  questions.py
archive/v1/backend/app/data/: questions.json
archive/v1/backend/app/prompts/: analysis_system.txt  insight_system.txt
archive/v1/backend/app/services/: llm_service.py  scoring_service.py
archive/v1/backend/tests/: test_assessment.py  test_questions.py
archive/v1/frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
archive/v1/others/: conflicts_examples.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.sh  vercel.json
backend/app/: config.py  main.py
backend/app/data/: questions_data.py
backend/app/prompts/: analysis_system.txt  analysis_system_en.txt
backend/app/services/: llm_service.py  scoring_service.py
deploy/: nginx.conf  setup.sh
docs/: PRD.md  PRD_v2.md  assessment_rules.md  backend_doc.md  frontend_doc.md  interview_guide.md  love_audit_PRD.md  questions.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LangHtmlAttr.tsx
frontend/src/data/: getQuestions.ts  questions.ts  questions_en.ts
frontend/src/hooks/: useSSE.ts
(+47 files in other folders)
